<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2012 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="app_name">Search Gesture Tester</string>
    <string name="hello">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam porttitor nisi posuere ipsum aliquet, vitae tristique est egestas. Proin in justo in dui viverra gravida. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse potenti. Donec posuere mauris eget elit pharetra dapibus. Vivamus in malesuada dolor. Phasellus aliquet ligula quis commodo commodo. Vestibulum eget purus in elit semper fringilla a quis diam. Praesent vitae rhoncus turpis, eu iaculis nisl. Sed ligula magna, tristique eu metus euismod, molestie condimentum arcu. Aenean pharetra, turpis a varius vulputate, quam mi luctus nisi, vel accumsan nibh leo consequat risus.

Praesent ut massa placerat, pretium magna ut, pharetra sem. In tempus vestibulum metus eu semper. Morbi faucibus augue sit amet dui rhoncus pellentesque. Integer tempus magna id orci lacinia, quis cursus nisl fringilla. Nullam non augue semper arcu convallis pretium. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam faucibus, libero vel mattis auctor, nulla sem elementum magna, sed malesuada libero libero sit amet lacus. Ut pretium varius pulvinar. Suspendisse ut congue nulla. Nulla rhoncus dolor nunc. Mauris pharetra congue dolor in interdum. Interdum et malesuada fames ac ante ipsum primis in faucibus.</string>
    <string name="search_button_desc">Search</string>
    <string name="normal_search">Normal search</string>
    <string name="question_mark">Question mark gesture</string>
    <string name="swirl_clockwise">Swirl clockwise</string>
    <string name="swirl_anticlockwise">Swirl anticlockwise</string>
    <string name="next">Next</string>
    <string name="welcome">Welcome, please select one of the four search methods and click next</string>
    <string name="advance">Advance</string>
    <string name="show_results">Show Results</string>
    <string name="no_results">No Results</string>
    <string name="tryanothersearchmethod">Try another search method</string>
    <string name="no_paths">No Paths Recorded</string>
</resources>
