<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/Welcome"
        android:text="@string/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"/>

    <RadioGroup
        android:id="@+id/search_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/normal_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/normal_search" />

        <RadioButton
            android:id="@+id/question_mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_mark" />

        <RadioButton
            android:id="@+id/swirl_clockwise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swirl_clockwise" />

        <RadioButton
            android:id="@+id/swirl_anticlockwise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swirl_anticlockwise" />
    </RadioGroup>

    <ToggleButton
        android:id="@+id/practice_toggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOff="Practice Tests"
        android:textOn="Practice Tests" />

    <Button
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next" />

</LinearLayout>
